--- a/bin/data/ui/mainmenu.glade
+++ b/bin/data/ui/mainmenu.glade
@@ -284,11 +284,10 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                 <property name="margin_right">5</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkStackSwitcher">
+                  <object class="GtkStackSwitcher" id="newgameswitch">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="halign">center</property>
-                    <property name="stack">stack1</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -302,18 +301,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="can_focus">False</property>
                     <property name="homogeneous">True</property>
                     <child>
-                      <object class="GtkStack" id="stack1">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <child>
-                          <placeholder/>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
