removed unused code
FossilOrigin-Name: abbf0da132e0c05ddb983310ce1cf73458b2f8f180dca1a30a1b89643d32379a

--- a/bin/data/ui/mainmenu.glade
+++ b/bin/data/ui/mainmenu.glade
@@ -284,16 +284,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                 <property name="margin_right">5</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkStackSwitcher" id="newgameswitch">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="halign">center</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">0</property>
-                  </packing>
+                  <placeholder/>
                 </child>
                 <child>
                   <placeholder/>
