removed unused code
FossilOrigin-Name: 51335abf0c4c23729a50a7cf841becd0becefd8a9967e67a80e13ce24009f599

--- a/bin/data/ui/mainmenu.glade
+++ b/bin/data/ui/mainmenu.glade
@@ -191,18 +191,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="btnloadgame">
-                        <property name="label" translatable="yes">_Load Game</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="use_underline">True</property>
-                        <signal name="clicked" handler="Show_Page" object="btnloadgame" swapped="no"/>
-                      </object>
-                      <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
