--- a/bin/data/ui/mainmenu.glade
+++ b/bin/data/ui/mainmenu.glade
@@ -176,19 +176,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="orientation">vertical</property>
                     <property name="layout_style">start</property>
                     <child>
-                      <object class="GtkButton" id="btnnewgame">
-                        <property name="label" translatable="yes">_New Game</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="use_underline">True</property>
-                        <signal name="clicked" handler="Show_Page" object="btnnewgame" swapped="no"/>
-                      </object>
-                      <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
