--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -545,19 +545,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
       </packing>
     </child>
     <child>
-      <object class="GtkButton" id="btnmissions">
-        <property name="label" translatable="yes">_Missions</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="use_underline">True</property>
-        <signal name="clicked" handler="Show_Missions" swapped="no"/>
-      </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">17</property>
-      </packing>
+      <placeholder/>
     </child>
     <child>
       <placeholder/>
