removed unused code
FossilOrigin-Name: 3452fc96ed21c0b9ce7adcfe7254c0db5d3df219d0f4d66abdb94017e95f9c5d

--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -515,19 +515,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
       </packing>
     </child>
     <child>
-      <object class="GtkButton" id="btnshipyard">
-        <property name="label" translatable="yes">Sh_ipyard</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="use_underline">True</property>
-        <signal name="clicked" handler="Show_Info" object="btnshipyard" swapped="no"/>
-      </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">15</property>
-      </packing>
+      <placeholder/>
     </child>
     <child>
       <placeholder/>
