--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -485,19 +485,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
       </packing>
     </child>
     <child>
-      <object class="GtkButton" id="btnheal">
-        <property name="label" translatable="yes">Heal _wounded</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="use_underline">True</property>
-        <signal name="clicked" handler="Show_Info" object="btnheal" swapped="no"/>
-      </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">13</property>
-      </packing>
+      <placeholder/>
     </child>
     <child>
       <placeholder/>
