--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -470,19 +470,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
       </packing>
     </child>
     <child>
-      <object class="GtkButton" id="btnpray">
-        <property name="label" translatable="yes">Pray</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="use_underline">True</property>
-        <signal name="clicked" handler="Execute_Order" object="btnpray" swapped="no"/>
-      </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">12</property>
-      </packing>
+      <placeholder/>
     </child>
     <child>
       <placeholder/>
